force-app/main/default/objects/candidates__c/candidates__c.object-meta.xml
<CustomObject>
    <label>candidates</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>