force-app/main/default/objects/candidates__c/fields/Candidate_number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_number__c</fullName>
    <label>Candidate number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>