force-app/main/default/objects/candidates__c/fields/GIVT_DIVISION__c.field-meta.xml
<CustomField>
    <fullName>GIVT_DIVISION__c</fullName>
    <label>GIVT DIVISION</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GOVT_WORKER__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARMY</fullName>
            </value>
            <value>
                <fullName>NAVY</fullName>
            </value>
            <value>
                <fullName>BANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>