force-app/main/default/objects/candidates__c/fields/GOVT_WORKER__c.field-meta.xml
<CustomField>
    <fullName>GOVT_WORKER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GOVT WORKER</label>
    <type>Checkbox</type>
</CustomField>