force-app/main/default/objects/candidates__c/fields/SUB_REGION__c.field-meta.xml
<CustomField>
    <fullName>SUB_REGION__c</fullName>
    <label>SUB REGION</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>REGION__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>NEW YORK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>