force-app/main/default/objects/candidates__c/listViews/LKJ.listView-meta.xml
<ListView>
    <fullName>LKJ</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>GIVT_DIVISION__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>GOVT_WORKER__c</columns>
    <columns>Candidate_number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GIVT_DIVISION__c</field>
        <operation>equals</operation>
        <value>ARMY</value>
    </filters>
    <label>JK</label>
</ListView>